syntax = "proto3";

package api;

option go_package = "account/api;api";
option java_multiple_files = true;
option java_package = "api";

service Account {
	rpc CreateAccount (CreateAccountRequest) returns (CreateAccountReply);
	rpc UpdateAccount (UpdateAccountRequest) returns (UpdateAccountReply);
	rpc DeleteAccount (DeleteAccountRequest) returns (DeleteAccountReply);
	rpc GetAccount (GetAccountRequest) returns (GetAccountReply);
	rpc ListAccount (ListAccountRequest) returns (ListAccountReply);
}

message CreateAccountRequest {}
message CreateAccountReply {}

message UpdateAccountRequest {}
message UpdateAccountReply {}

message DeleteAccountRequest {}
message DeleteAccountReply {}

message GetAccountRequest {}
message GetAccountReply {}

message ListAccountRequest {}
message ListAccountReply {}